fix code in dark mode tweak blockquote border

--- a/assets/styles/authoring/editors.scss
+++ b/assets/styles/authoring/editors.scss
@@ -17,7 +17,7 @@
 .blockquote {
   position: relative;
   padding: 1.8rem 1.5rem;
-  border: .2rem solid $gray-400;
+  border: 2px solid $gray-400;
 
   &::before {
     content: "“";
