--- a/assets/styles/delivery/main.scss
+++ b/assets/styles/delivery/main.scss
@@ -109,7 +109,7 @@ main.container {
 .blockquote {
   position: relative;
   padding: 1.8rem 1.5rem;
-  border: .2rem solid $gray-400;
+  border: 2px solid $gray-400;
 
   &::before {
     content: "“";
